--- a/backup1/biblio.bib
+++ b/backup1/biblio.bib
@@ -1,10 +1,8 @@
 
 @PhdThesis{Benante2008phd,
-author = {Ruben Carlo Benante},
-title = {Geração de Trajetórias de Estados por Mapas Auto-organizáveis com Topologia Dinâmica},
-address = {Recife},
-year = {2008},
-pages = {182},
-type = {Doutorado em Ciências da Computação},
-school = {Universidade Federal de Pernambuco}
+author = {Dan Gookim},
+title = {Programmer's Guide to Ncurses},
+address = {Indianapolis},
+year = {2007},
+pages = {556}
 }
