--- a/backup1/biblio.bib
+++ b/backup1/biblio.bib
@@ -1,8 +1,6 @@
-
-@PhdThesis{Benante2008phd,
-author = {Dan Gookim},
-title = {Programmer's Guide to Ncurses},
-address = {Indianapolis},
-year = {2007},
-pages = {556}
+@book{gookin2007programmer,
+  title={Programmer's Guide to NCurses},
+  author={Gookin, Dan},
+  year={2007},
+  publisher={John Wiley \& Sons}
 }
