--- a/testesGit/biblio.bib
+++ b/testesGit/biblio.bib
@@ -2,8 +2,8 @@
 @PhdThesis{Benante2008phd,
 author = {Ruben Carlo Benante},
 title = {Geração de Trajetórias de Estados por Mapas Auto-organizáveis com Topologia Dinâmica},
-address = {Recife},
-year = {2008},
+address = {indianapolis},
+year = {2007},
 pages = {182},
 type = {Doutorado em Ciências da Computação},
 school = {Universidade Federal de Pernambuco}
