--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -97,7 +97,7 @@ A razão da implementação desse projeto é a importancia do aprendizado da Bib
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagens/imagem.png}
+\includegraphics[width=.50\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
