--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -84,11 +84,11 @@ O projeto tem como objetivo apresentar e ensinar a Biblioteca Ncurses e suas apl
 \subsection{Objetivos Específicos}
 
 
-\begin{itemize}
+\begin{enumerate}
  \item Promover uma compreensão da biblioteca Ncurses.
  \item Ensinar a desenvolver um jogo simples assim como interfaces e menus.
  \item Desenvolver uma base para outras Bibliotecas de criação de interface.   
-\end{itemize}
+\end{enumerate}
 
 
 % seção de justificativa %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
