--- a/backup1/biblio.bib
+++ b/backup1/biblio.bib
@@ -1,6 +1,8 @@
-@book{gookin2007programmer,
-  title={Programmer's Guide to NCurses},
-  author={Gookin, Dan},
-  year={2007},
-  publisher={John Wiley \& Sons}
+
+@PhdThesis{Benante2008phd,
+author = {Dan Gookin},
+title = {Programmer's Guide To Ncurses},
+address = {Indianapolis},
+year = {2007},
+pages = {556}
 }
