--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -253,7 +253,7 @@ Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacida
 %\section*{Referências Bibliográficas}
 
 % cite todos, mesmo os não referenciados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\nocite{*}
+\nocite{Benante2008phd}
 
 % se necessario %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % troca autor and autor por autor & autor, na bibliografia. O dcu usa "and"
