--- a/backup1/biblio.bib
+++ b/backup1/biblio.bib
@@ -1,7 +1,7 @@
 
 @PhdThesis{Benante2008phd,
 author = {Dan Gookin},
-title = {Programmer's Guide To Ncurses},
+title = {Programmer's Guide to Ncurses},
 address = {Indianapolis},
 year = {2007},
 pages = {556}
