--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -272,18 +272,18 @@ Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacida
 %\section*{Referências Bibliográficas}
 
 % cite todos, mesmo os não referenciados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\nocite{*}
+\cite{gookin2007programmer}
 
 % se necessario %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % troca autor and autor por autor & autor, na bibliografia. O dcu usa "and"
 %\renewcommand{\harvardand}{\&} % troca and pro &. O dcu usa "and"
 
 % Estilos de bibliografia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \bibliographystyle{abnt-alf} % Estilo alfabético da ABNT. Opção [num] para estilo numérico
+ \bibliographystyle{abnt-alf} % Estilo alfabético da ABNT. Opção [num] para estilo numérico
 %\bibliographystyle{apalike}
 %\bibliographystyle{dcu} %citacao como (autor and autor, ano). Parece apalike. Rev. Control. Automacao. Use com harvard
 %\bibliographystyle{agsm} % padrao harvard fica (autor & autor ano).
-\bibliographystyle{acm}
+%\bibliographystyle{acm}
 
 % arquivo de banco de dados das referências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % renomear para o número do exercício correto
