--- a/testesGit/biblio.bib
+++ b/testesGit/biblio.bib
@@ -1,10 +1,7 @@
 
-@PhdThesis{Benante2008phd,
-author = {Ruben Carlo Benante},
-title = {Geração de Trajetórias de Estados por Mapas Auto-organizáveis com Topologia Dinâmica},
-address = {indianapolis},
-year = {2007},
-pages = {182},
-type = {Doutorado em Ciências da Computação},
-school = {Universidade Federal de Pernambuco}
+@book{gookin2007programmer,
+  title={Programmer's Guide to NCurses},
+  author={Gookin, Dan},
+  year={2007},
+  publisher={John Wiley \& Sons}
 }
