--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -279,11 +279,11 @@ Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacida
 %\renewcommand{\harvardand}{\&} % troca and pro &. O dcu usa "and"
 
 % Estilos de bibliografia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- \bibliographystyle{abnt-alf} % Estilo alfabético da ABNT. Opção [num] para estilo numérico
+% \bibliographystyle{abnt-alf} % Estilo alfabético da ABNT. Opção [num] para estilo numérico
 %\bibliographystyle{apalike}
 %\bibliographystyle{dcu} %citacao como (autor and autor, ano). Parece apalike. Rev. Control. Automacao. Use com harvard
 %\bibliographystyle{agsm} % padrao harvard fica (autor & autor ano).
-%\bibliographystyle{acm}
+\bibliographystyle{acm}
 
 % arquivo de banco de dados das referências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % renomear para o número do exercício correto
