--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagens/imagem.png}
+\includegraphics[width=.50\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -294,6 +294,6 @@ Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacida
 % renomear para o número do exercício correto
 % o arquivo de bibliografia pode se chamar qualquer coisa, isso não muda o comando de gerar o PDF. 
 % Por exemplo para 'mybiblio.bib', use \bibliography{mybiblio} e os comandos pdflatex e bibtex continuam os mesmos identicos com exN.
-\bibliography{biblio}
+\bibliography{biblioABS}
 
 \end{document}
