--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -212,26 +212,26 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 %\end{center}
 %\end{table}
 
- \begin{table}[ht] 
- \begin{center}
-  \caption{Tabela de cronograma do projeto de extensão}
- \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
-   \hline \hline
-        & \multicolumn{4}{|c|}{\textbf{mês 01}} & \multicolumn{4}{|c|}{\textbf{mês 02}} & \multicolumn{4}{|c|}{\textbf{mês 03}} \\ \hline \hline
-     \textbf{ativividade semanal} & 01 & 02 & 03 & 04 & 05 & 06 & 07 & 08 &09 & 10&11&12& \hline
-    Etapa de fundamentação e organização & X & X & X & & & & & & & & & & \hline
-    Criação do roteiro e gravação do vídeo 1 & & & & X & & & & & & & & & \hline
-    Criação do roteiro e gravação do vídeo 2 & & & & & X & & & & & & & & \hline
-    Criação do roteiro e gravação do vídeo 3 & & & & & & X & & & & & & & \hline
-    Criação do roteiro e gravação do vídeo 4 & & & & & & & X & & & & & & \hline
-    Criação do roteiro e gravação do vídeo 5 & & & & & & & & X & & & & & \hline
-    Criação do roteiro e gravação do vídeo 6 & & & & & & & & & X & & & & \hline
-    Elaboração do relatório final & & & & & & & & & & X & X & & \hline
-    Entrega e validação do projeto. & & & & & & & & & & & & X & \hline \hline
- \end{tabular}
- \label{tab:resultados}
- \end{center}
- \end{table}
+% \begin{table}[ht] 
+% \begin{center}
+%  \caption{Tabela de cronograma do projeto de extensão}
+% \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
+%   \hline \hline
+%        & \multicolumn{4}{|c|}{\textbf{mês 01}} & \multicolumn{4}{|c|}{\textbf{mês 02}} & \multicolumn{4}{|c|}{\textbf{mês 03}} \\ \hline \hline
+%     \textbf{ativividade semanal} & 01 & 02 & 03 & 04 & 05 & 06 & 07 & 08 &09 & 10&11&12& \hline
+%    Etapa de fundamentação e organização & X & X & X & & & & & & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 1 & & & & X & & & & & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 2 & & & & & X & & & & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 3 & & & & & & X & & & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 4 & & & & & & & X & & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 5 & & & & & & & & X & & & & & \hline
+%    Criação do roteiro e gravação do vídeo 6 & & & & & & & & & X & & & & \hline
+%    Elaboração do relatório final & & & & & & & & & & X & X & & \hline
+%    Entrega e validação do projeto. & & & & & & & & & & & & X & \hline \hline
+% \end{tabular}
+% \label{tab:resultados}
+% \end{center}
+% \end{table}
 
 
 
