--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -294,6 +294,6 @@ Ao fim do curso, espera-se que os indivíduos contemplados tenham plena capacida
 % renomear para o número do exercício correto
 % o arquivo de bibliografia pode se chamar qualquer coisa, isso não muda o comando de gerar o PDF. 
 % Por exemplo para 'mybiblio.bib', use \bibliography{mybiblio} e os comandos pdflatex e bibtex continuam os mesmos identicos com exN.
-\bibliography{biblioABS}
+\bibliography{biblio}
 
 \end{document}
