--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -209,7 +209,8 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 %\end{center}
 %\end{table}
 
- \begin{table}[ht] 
+%é só [ht] para voltar ao normal
+ \begin{table}[!htb] 
  \begin{center}
   \caption{Tabela de cronograma do projeto de extensão}
  \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
