--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -210,7 +210,7 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 %\end{table}
 
 %é só [ht] para voltar ao normal
- \begin{table}[!htb] 
+ \begin{table}[ht] 
  \begin{center}
   \caption{Tabela de cronograma do projeto de extensão}
  \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
