--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -111,8 +111,7 @@ O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{enumerate}
  \item Acesso a internet de qualidade.
- \item Câmera ou webcam de qualidade.
- \item Computador e smartphones para cada integrante da equipe.
+ \item Computador para cada integrante da equipe; câmera ou webcam de qualidade.
 \end{enumerate}
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
