retirando a tabela do arquivo.tex 2

--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -140,31 +140,31 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 % seção Plano de Trabalho %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Cronograma}
 
-% \begin{table}[ht] 
-% \begin{center}
-%  \caption{Tabela de cronograma do projeto de extensão}
-% \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
-%   \hline \hline
-%        & \multicolumn{4}{|c|}{\textbf{mês 01}} & \multicolumn{4}{|c|}{\textbf{mês 02}} & \multicolumn{4}{|c|}{\textbf{mês 03}} \\ \hline \hline
-%     \textbf{ativividade semanal} & 01 & 02 & 03 & 04 & 05 & 06 & 07 & 08 &09 & 10&11&12& \hline
-%    Etapa de fundamentação e organização & X & X & X & & & & & & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 1 & & & & X & & & & & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 2 & & & & & X & & & & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 3 & & & & & & X & & & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 4 & & & & & & & X & & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 5 & & & & & & & & X & & & & & \hline
-%    Criação do roteiro e gravação do vídeo 6 & & & & & & & & & X & & & & \hline
-%    Elaboração do relatório final & & & & & & & & & & X & X & & \hline
-%    Entrega e validação do projeto. & & & & & & & & & & & & X & \hline \hline
-% \end{tabular}
-% \label{tab:resultados}
-% \end{center}
-% \end{table}
+ \begin{table}[ht] 
+ \begin{center}
+  \caption{Tabela de cronograma do projeto de extensão}
+ \begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|}
+   \hline \hline
+        & \multicolumn{4}{|c|}{\textbf{mês 01}} & \multicolumn{4}{|c|}{\textbf{mês 02}} & \multicolumn{4}{|c|}{\textbf{mês 03}} \\ \hline \hline
+     \textbf{ativividade semanal} & 01 & 02 & 03 & 04 & 05 & 06 & 07 & 08 &09 & 10&11&12& \hline
+    Etapa de fundamentação e organização & X & X & X & & & & & & & & & & \hline
+    Criação do roteiro e gravação do vídeo 1 & & & & X & & & & & & & & & \hline
+    Criação do roteiro e gravação do vídeo 2 & & & & & X & & & & & & & & \hline
+    Criação do roteiro e gravação do vídeo 3 & & & & & & X & & & & & & & \hline
+    Criação do roteiro e gravação do vídeo 4 & & & & & & & X & & & & & & \hline
+    Criação do roteiro e gravação do vídeo 5 & & & & & & & & X & & & & & \hline
+    Criação do roteiro e gravação do vídeo 6 & & & & & & & & & X & & & & \hline
+    Elaboração do relatório final & & & & & & & & & & X & X & & \hline
+    Entrega e validação do projeto. & & & & & & & & & & & & X & \hline \hline
+ \end{tabular}
+ \label{tab:resultados}
+ \end{center}
+ \end{table}
 
 
 
 % seção de impactos alcançados %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Impactos e Transferências}
+% \section{Impactos e Transferências}
 
 % subseção de impacto científico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Científico}
@@ -187,9 +187,9 @@ Não há impacto econômico relevante.
 O projeto visa contribuir para a sociedade, ajudando a democratizar o conhecimento por intermédio de uma plataformar de compartilhamento de vídeos. 
 
 % subseção de impacto ambiental %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Ambiental}
+% \subsection{Impacto Ambiental}
 
-Não há impacto ambiental relevante.
+% Não há impacto ambiental relevante.
 
 % subseção de transferências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Transferências}
