--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -103,7 +103,15 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia}
 
-O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e teorias que serão abordados, possibilitando assumir várias posições no decorrer do percurso. Para obter os resultados pretendidos, a equipe começará pela etapa de fundamentação e organização, onde serão levantados os principais conceitos sobre o tema e todoo planejamento estratégico da equipe durante o processo, a fim de aprimorar, embasar e organizar todo o trabalho. Em seguida, serão estruturados roteiros que irão guiar cada integrante na elaboracão das suas respectivas atividades semanais. Ademais, serão feitas reuniões periódicas e ajustes das ações em andamento e também a elaboração de slides para auxiliar no processo de gravação das aulas. Outrossim, aulas serão ministradas e gravadas com o suporte de toda a equipe e posteriormente organizadas para serem implementadas em uma plataforma de compartilhamento de vídeos escolhida  pelo  professor orientador. Por fim, um relatório final será elaborado e entregue ao departamento responsável, com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
+O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e teorias que serão abordados, possibilitando assumir várias posições no decorrer do percurso. 
+
+Para obter os resultados pretendidos, a equipe começará pela etapa de fundamentação e organização, onde serão levantados os principais conceitos sobre o tema e todoo planejamento estratégico da equipe durante o processo, a fim de aprimorar, embasar e organizar todo o trabalho. 
+
+Em seguida, serão estruturados roteiros que irão guiar cada integrante na elaboracão das suas respectivas atividades semanais. Ademais, serão feitas reuniões periódicas e ajustes das ações em andamento e também a elaboração de slides para auxiliar no processo de gravação das aulas. 
+
+Outrossim, aulas serão ministradas e gravadas com o suporte de toda a equipe e posteriormente organizadas para serem implementadas em uma plataforma de compartilhamento de vídeos escolhida  pelo  professor orientador. 
+
+Por fim, um relatório final será elaborado e entregue ao departamento responsável, com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
  
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
