ultimas alterações do arquivo .tex e do pdf

--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -68,7 +68,7 @@ Vamos abordar a biblioteca Ncurses e explicar o funcionamento do projeto de exte
 \section{Introdução}
 
 % Descrever melhor seu projeto aqui 
-O  projeto de extens˜ao será um minicurso sobre a biblioteca Ncurses em linguagem C. Nesse curso, serão abordadas algumas das principais funções e aplicações dessa biblioteca.
+O projeto de extensão será um minicurso sobre a biblioteca Ncurses em linguagem C. Nesse curso, serão abordadas algumas das principais funções e aplicações dessa biblioteca.
 
 % seção de objetivos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Objetivos}
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagem.png}
+\includegraphics[width=.50\linewidth]{imagens/imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -103,17 +103,25 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 % seção de metodologia %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metodologia}
 
-O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e teorias que serão abordados, possibilitando assumir várias posições no decorrer do percurso. Para obter os resultados pretendidos, a equipe começará pela etapa de fundamentação e organização, onde serão levantados os principais conceitos sobre o tema e todoo planejamento estratégico da equipe durante o processo, a fim de aprimorar, embasar e organizar todo o trabalho. Em seguida, serão estruturados roteiros que irão guiar cada integrante na elaboracão das suas respectivas atividades semanais. Ademais, serão feitas reuniões periódicas e ajustes das ações em andamento e também a elaboração de slides para auxiliar no processo de gravação das aulas. Outrossim, aulas serão ministradas e gravadas com o suporte de toda a equipe e posteriormente organizadas para serem implementadas em uma plataforma de compartilhamento de vídeos escolhida  pelo  professor orientador. Por fim, um relatório final será elaborado e entregue ao departamento responsável, com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
+O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e teorias que serão abordados, possibilitando assumir várias posições no decorrer do percurso.
+
+Para obter os resultados pretendidos, a equipe começará pela etapa de fundamentação e organização, onde serão levantados os principais conceitos sobre o tema e todo o planejamento estratégico da equipe durante o processo, a fim de aprimorar, embasar e organizar todo o trabalho.
+
+Em seguida, serão estruturados roteiros que irão guiar cada integrante na elaboracão das suas respectivas atividades semanais.
+
+Ademais, serão feitas reuniões periódicas e ajustes das ações em andamento e também a elaboração de slides para auxiliar no processo de gravação das aulas.
+
+As aulas serão ministradas e gravadas com o suporte de toda a equipe e, posteriormente, organizadas para serem implementadas em uma plataforma de compartilhamento de vídeos escolhida  pelo  professor orientador.
+
+Por fim, um relatório final será elaborado e entregue ao departamento responsável, com o intuito de registrar e efetivar o trabalho desenvolvido pelos estudantes.
  
 % subseção equipamentos %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Equipamentos Necessários}
 
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{enumerate}
- \item Programas de edição de vídeos. 
- \item Acesso a internet de qualidade.
- \item Câmera ou webcam de qualidade.
- \item Computador e smartphones para cada integrante da equipe.
+ \item Programas de edição de vídeos, materiais de suporte e acesso à internet de qualidade. 
+ \item Câmeras e computadores de qualidade para cada integrande da equipe.
 \end{enumerate}
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -165,7 +173,8 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
   \item Etapa de fundamentação e organização:
       \begin{enumerate}
          \item planejamento estratégico das ações e organização das tarefas;
-         \item idealização dos códigos que serão utilizados;
+         \item revisão bibliográfica;
+         \item idealização e implementação dos códigos que serão utilizados;
       \end{enumerate}    
   \item Criação do roteiro, slides e gravação do vídeo 1.
   \item Criação do roteiro, slides e gravação do vídeo 2.
@@ -235,9 +244,9 @@ Não há impacto científico relevante.
 Não há impacto tecnológico relevante.
 
 % subseção de econônimo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Econômico}
+\subsection{Impacto Econômico e Ambiental}
 
-Não há impacto econômico relevante.
+Não há impacto econômico e ambiental relevante.
 
 % subseção de impacto social %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Social}
@@ -245,9 +254,9 @@ Não há impacto econômico relevante.
 O projeto visa contribuir para a sociedade, ajudando a democratizar o conhecimento por intermédio de uma plataformar de compartilhamento de vídeos. 
 
 % subseção de impacto ambiental %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Ambiental}
+%\subsection{Impacto Ambiental}
 
-Não há impacto ambiental relevante.
+%Não há impacto ambiental relevante.
 
 % subseção de transferências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Transferências}
