--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagem.png}
+\includegraphics[width=.50\linewidth]{imagens/imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -110,7 +110,7 @@ O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e
 
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{enumerate}
- \item Programas de edição de vídeos, materiais de suporte e acesso à internet de qualidade. 
+ \item Programas de edição de vídeos e acesso à internet de qualidade. 
  \item Câmeras e computadores de qualidade para cada integrande da equipe.
 \end{enumerate}
 
