--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagem.png}
+\includegraphics[width=.50\linewidth]{imagens/imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -110,8 +110,8 @@ O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e
 
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{enumerate}
- \item Programas de edição de vídeos e acesso à internet de qualidade. 
- \item Câmeras e computadores de qualidade para cada integrande da equipe.
+ \item Acesso à internet de qualidade. 
+ \item Computador para cada integrante da equipe; câmera ou webcam de qualidade.
 \end{enumerate}
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -234,9 +234,9 @@ Não há impacto científico relevante.
 Não há impacto tecnológico relevante.
 
 % subseção de econônimo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Econômico e Ambiental}
+\subsection{Impacto Econômico}
 
-Não há impacto econômico e ambiental relevante.
+Não há impacto econômico relevante.
 
 % subseção de impacto social %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Social}
