--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -229,14 +229,14 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 Não há impacto científico relevante.
 
 % subseção de impacto tecnológico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Tecnológico}
+%\subsection{Impacto Tecnológico}
 
-Não há impacto tecnológico relevante.
+%Não há impacto tecnológico relevante.
 
 % subseção de econônimo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Impacto Econômico}
+%\subsection{Impacto Econômico}
 
-Não há impacto econômico relevante.
+%Não há impacto econômico relevante.
 
 % subseção de impacto social %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Impacto Social}
