--- a/testesGit/biblio.bib
+++ b/testesGit/biblio.bib
@@ -1,6 +1,9 @@
-@book{gookin2007programmer,
-  title={Programmer's Guide to NCurses},
-  author={Gookin, Dan},
-  year={2007},
-  publisher={John Wiley \& Sons}
+@PhdThesis{Benante2008phd,
+author = {Dan Gookin},
+title = {Programmer's Guide to Ncurses},
+address = {Indianapolis},
+year = {2007},
+pages = {556}
 }
+
+
