--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[ht] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.50\linewidth]{imagem.png}
+\includegraphics[width=.60\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -228,10 +228,10 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 
 Não há impacto científico relevante.
 
-% subseção de impacto tecnológico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{Impacto Tecnológico}
+ subseção de impacto tecnológico %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Impacto Tecnológico}
 
-%Não há impacto tecnológico relevante.
+Não há impacto tecnológico relevante.
 
 % subseção de econônimo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\subsection{Impacto Econômico}
