--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -244,9 +244,9 @@ Não há impacto tecnológico relevante.
 O projeto visa contribuir para a sociedade, ajudando a democratizar o conhecimento por intermédio de uma plataformar de compartilhamento de vídeos. 
 
 % subseção de impacto ambiental %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\subsection{Impacto Ambiental}
+\subsection{Impacto Ambiental}
 
-%Não há impacto ambiental relevante.
+Não há impacto ambiental relevante.
 
 % subseção de transferências %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Transferências}
