--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -110,8 +110,8 @@ O método de pesquisa escolhido favorece a liberdade na análise dos conceitos e
 
 %Listar os equipamentos necessários para a implementação do projeto.
 \begin{enumerate}
- \item Acesso à internet de qualidade. 
- \item Computador para cada integrante da equipe; câmera ou webcam de qualidade.
+ \item Programas de edição de vídeos, materiais de suporte e acesso à internet de qualidade 
+ \item Câmeras e computadores de qualidade para cada integrante da equipe.
 \end{enumerate}
 
 % subseção com algoritmo %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
