--- a/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/testesGit/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -164,8 +164,9 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
       \begin{enumerate}
          \item planejamento estratégico das ações e organização das tarefas;
          \item revisão bibliográfica;
-         \item idealização e implementação dos códigos que serão utilizados;
-      \end{enumerate}    
+         \item idealização dos códigos que serão utilizados;
+         \item criação dos projetos de fixação(prototipos para treinamento e nivelamento). 
+     \end{enumerate}    
   \item Criação do roteiro, slides e gravação do vídeo 1.
   \item Criação do roteiro, slides e gravação do vídeo 2.
   \item Criação do roteiro, slides e gravação do vídeo 3.
