testando mais uma vez

--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[!htbp] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.40\linewidth]{imagens/imagem.png}
+\includegraphics[width=.40\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
