--- a/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
+++ b/backup1/pext-matdiscreta-benante-Seabra-Morais-Almeida-Delmondes-Moreira-Sarruf-Araujo.tex
@@ -94,7 +94,7 @@ O conhecimento sobre a biblioteca Ncurses é muito importante, pois serve de bas
 
 \begin{figure}[!htbp] %modificação feita para fixar a imagem
 \centering
-\includegraphics[width=.30\linewidth]{imagem.png}
+\includegraphics[width=.40\linewidth]{imagem.png}
 \caption{Exemplo de aplicação do Ncurses}
 \label{fig:xsort}
 \end{figure}
@@ -137,7 +137,7 @@ A implementaçãao será feita por meio da criação de uma playlist em uma plat
 %\State \textbf{returna} a ação $a$ em sucessores(estado) cujo valor é $v$ %\Comment{comentario}
 
 % \While{$r\not=0$}\Comment{We have the answer if r is 0}
-% \State $a\gets b$
+0% \State $a\gets b$
 % \State $b\gets r$
 % \State $r\gets a\bmod b$
 % \EndWhile\label{euclidendwhile}
